--- a/app/src/main/res/layout/article_detail_content_row.xml
+++ b/app/src/main/res/layout/article_detail_content_row.xml
@@ -5,21 +5,10 @@
                                              android:layout_width="match_parent"
                                              android:layout_height="wrap_content">
 
-    <TextView
-            android:text="TextView"
+    <WebView
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/content_textView"
-            android:layout_marginTop="16dp"
-            android:gravity="fill_horizontal"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="16dp"
-            android:layout_marginStart="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp"
-            android:textColor="@android:color/white"
-            android:textSize="14sp"
-            android:lineSpacingExtra="8sp" app:fontFamily="@font/basic"/>
+            android:layout_height="wrap_content" android:id="@+id/okokaja" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
 </android.support.constraint.ConstraintLayout>
