--- a/app/src/main/res/layout/article_detail_image_row.xml
+++ b/app/src/main/res/layout/article_detail_image_row.xml
@@ -8,10 +8,10 @@
     <ImageView
             android:layout_width="0dp"
             android:layout_height="250dp" app:srcCompat="@mipmap/ic_launcher"
-            android:id="@+id/article_detail_imageView" android:layout_marginTop="8dp"
+            android:id="@+id/article_detail_imageView"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:scaleType="centerCrop"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            android:scaleType="centerCrop"/>
     <View
             android:layout_width="0dp"
             android:layout_height="250dp"
@@ -24,19 +24,28 @@
     <TextView
             android:text="Subtitle"
             android:layout_width="0dp"
-            android:layout_height="wrap_content" android:id="@+id/subtitle_textView"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
-            android:layout_marginStart="16dp" android:layout_marginBottom="16dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="16dp" android:layout_marginRight="16dp" android:textColor="@android:color/white"
+            android:layout_height="wrap_content"
+            android:id="@+id/subtitle_textView"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginBottom="16dp"
+            app:layout_constraintBottom_toBottomOf="@id/article_detail_imageView"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp"
+            android:textColor="@android:color/white"
             app:fontFamily="@font/basic"/>
     <TextView
             android:text="Title"
             android:layout_width="0dp"
-            android:layout_height="wrap_content" android:id="@+id/title_textView"
+            android:layout_height="wrap_content"
+            android:id="@+id/title_textView"
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toTopOf="@+id/subtitle_textView"
             app:layout_constraintStart_toStartOf="@+id/subtitle_textView"
-            app:layout_constraintEnd_toEndOf="@+id/subtitle_textView" android:textSize="18sp" android:textStyle="bold"
-            android:textColor="@android:color/white" app:fontFamily="@font/basic"/>
+            app:layout_constraintEnd_toEndOf="@+id/subtitle_textView"
+            android:textSize="18sp" android:textStyle="bold"
+            android:textColor="@android:color/white"
+            app:fontFamily="@font/basic"/>
 </android.support.constraint.ConstraintLayout>
