--- a/app/src/main/res/layout/article_main_row.xml
+++ b/app/src/main/res/layout/article_main_row.xml
@@ -20,17 +20,22 @@
 
             <ImageView
                     android:layout_width="0dp"
-                    android:layout_height="250dp" app:srcCompat="@mipmap/ic_launcher"
+                    android:layout_height="225dp" app:srcCompat="@mipmap/ic_launcher"
                     android:id="@+id/article_card_imageView"
                     app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     android:scaleType="centerCrop"/>
             <View
                     android:layout_width="0dp"
-                    android:layout_height="250dp"
+                    android:layout_height="0dp"
                     android:background="#000000"
                     android:alpha=".35"
-                    android:id="@+id/view_mask"/>
+                    android:id="@+id/view_mask"
+                    app:layout_constraintBottom_toBottomOf="@+id/article_card_imageView"
+                    app:layout_constraintTop_toTopOf="@+id/article_card_imageView"
+                    app:layout_constraintEnd_toEndOf="@+id/article_card_imageView"
+                    app:layout_constraintStart_toStartOf="@+id/article_card_imageView"
+            />
             <TextView
                     android:text="Article Sub View"
                     android:layout_width="0dp"
