--- a/app/src/main/res/layout/post_main_row.xml
+++ b/app/src/main/res/layout/post_main_row.xml
@@ -6,9 +6,9 @@
                                              android:layout_height="wrap_content"
                                              android:background="#000000">
 
-    <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp" app:srcCompat="@mipmap/ic_launcher_round"
+    <de.hdodenhof.circleimageview.CircleImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp" app:srcCompat="@mipmap/ic_launcher_round"
             android:id="@+id/profile_pic_imageView"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp" android:layout_marginTop="16dp"
@@ -49,7 +49,7 @@
             android:id="@+id/story_textView" android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@+id/post_main_imageView" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginLeft="16dp" android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="9dp" android:layout_marginRight="9dp" app:fontFamily="@font/basic"
+            android:layout_marginEnd="16dp" android:layout_marginRight="16dp" app:fontFamily="@font/basic"
             android:textColor="@android:color/white"
-            android:layout_marginBottom="64dp" app:layout_constraintBottom_toBottomOf="parent"/>
+            android:layout_marginBottom="40dp" app:layout_constraintBottom_toBottomOf="parent"/>
 </android.support.constraint.ConstraintLayout>
