--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,10 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="AppTransparent" parent="AppTheme">
+        <item name="colorPrimary">@android:color/transparent</item>
+        <!--<item name="colorPrimaryDark">@android:color/transparent</item>-->
+        <item name="windowActionBarOverlay">true</item>
+    </style>
+
 </resources>
