--- a/app/src/main/res/layout/post_main_row.xml
+++ b/app/src/main/res/layout/post_main_row.xml
@@ -8,10 +8,13 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
             android:layout_width="40dp"
-            android:layout_height="40dp" app:srcCompat="@mipmap/ic_launcher_round"
+            android:layout_height="40dp"
+            app:srcCompat="@mipmap/ic_launcher_round"
             android:id="@+id/profile_pic_imageView"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
-            android:layout_marginStart="16dp" android:layout_marginTop="16dp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
             app:layout_constraintTop_toTopOf="parent"/>
     <ImageView
             android:layout_width="0dp"
