--- a/app/src/main/res/layout/profile_main.xml
+++ b/app/src/main/res/layout/profile_main.xml
@@ -15,32 +15,95 @@
             app:layout_constraintTop_toTopOf="parent"
             android:layout_width="0dp"/>
 
+    <ImageView
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            app:srcCompat="@drawable/user123"
+            android:id="@+id/profile_based_imageView"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/view"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
     <de.hdodenhof.circleimageview.CircleImageView
             android:layout_width="60dp"
             android:layout_height="60dp"
-            app:srcCompat="@android:drawable/sym_def_app_icon"
+            app:srcCompat="@drawable/user123"
             android:id="@+id/profile_imageView"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toTopOf="@+id/view"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-    />
+            app:layout_constraintEnd_toEndOf="parent"/>
 
     <TextView
-            android:id="@+id/username_profile"
+            android:text=" User Name"
             android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView2"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="32dp"
+            android:layout_marginStart="32dp"
+            android:textColor="@android:color/darker_gray"
+            android:textSize="12sp"
+            app:fontFamily="@font/assistant"
+            app:layout_constraintTop_toBottomOf="@+id/view"
+            android:layout_marginEnd="32dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginRight="32dp"/>
+
+    <EditText
+            android:id="@+id/username_textView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="32dp"
+            android:layout_marginRight="32dp"
             android:ems="10"
             android:hint="Username"
             android:inputType="textPersonName"
-            android:paddingLeft="20dp"
             app:layout_constraintEnd_toEndOf="parent"
+            android:textColor="@android:color/white"
+            app:fontFamily="@font/assistant_bold"
+            android:layout_marginStart="32dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintTop_toBottomOf="@+id/view"
-            android:textColor="@android:color/darker_gray" app:fontFamily="@font/basic"/>
+            android:layout_marginLeft="32dp"
+            app:layout_constraintHorizontal_bias="1.0"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView2"/>
+
+    <TextView
+            android:text=" About"
+            android:layout_width="0dp"
+            android:layout_height="14dp"
+            android:id="@+id/textView3"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="32dp"
+            android:layout_marginStart="32dp"
+            android:textColor="@android:color/darker_gray"
+            android:textSize="12sp"
+            app:fontFamily="@font/assistant"
+            android:layout_marginEnd="32dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginRight="32dp"
+            app:layout_constraintHorizontal_bias="1.0"
+            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/username_textView"/>
+
+    <EditText
+            android:id="@+id/about_textView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="32dp"
+            android:layout_marginRight="32dp"
+            android:ems="10"
+            android:hint="Username"
+            android:inputType="textPersonName"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:textColor="@android:color/white"
+            app:fontFamily="@font/assistant_bold"
+            android:layout_marginStart="32dp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="32dp"
+            app:layout_constraintHorizontal_bias="1.0"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView3"/>
+
 
 </android.support.constraint.ConstraintLayout>
