--- a/app/src/main/res/layout/post_add.xml
+++ b/app/src/main/res/layout/post_add.xml
@@ -7,51 +7,32 @@
                                              android:layout_height="match_parent">
 
     <ImageView
-            android:layout_width="0dp"
-            android:layout_height="220dp"
-            app:srcCompat="@android:drawable/ic_input_add"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/addpicture"
             android:id="@+id/post_add_imageView"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:scaleType="center"/>
-    <View
-            android:layout_height="1dp"
-            android:id="@+id/view"
-            android:background="#000000"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_width="0dp"/>
-
-    <ImageView
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            app:srcCompat="@drawable/camera_float1"
-            android:id="@+id/imageView"
-            app:layout_constraintTop_toBottomOf="@+id/view"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="16dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"/>
+            android:scaleType="fitCenter" android:adjustViewBounds="true"
+    />
 
     <EditText
             android:layout_width="0dp"
             android:hint="Tambah caption"
             android:textColorHint="@android:color/darker_gray"
             android:layout_height="wrap_content"
-            android:id="@+id/textView"
+            android:id="@+id/caption_textView"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp"
+            android:layout_marginEnd="32dp"
+            android:layout_marginRight="32dp"
             android:textColor="@android:color/darker_gray"
             android:textSize="14sp"
             app:fontFamily="@font/basic"
             android:singleLine="true"
-            app:layout_constraintStart_toEndOf="@+id/imageView"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            app:layout_constraintTop_toTopOf="@+id/imageView" android:inputType="textPersonName"/>
+            android:inputType="textPersonName" android:layout_marginStart="32dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
+            app:layout_constraintHorizontal_bias="0.0"
+            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/post_add_imageView"/>
 
 </android.support.constraint.ConstraintLayout>
