--- a/app/src/main/res/layout/post_main_row.xml
+++ b/app/src/main/res/layout/post_main_row.xml
@@ -16,10 +16,44 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toTopOf="parent"/>
+    <TextView
+            android:text="TextView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/userName_textView"
+            app:fontFamily="@font/basic"
+            android:textColor="@android:color/white"
+            android:singleLine="true"
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@+id/profile_pic_imageView"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
+            app:layout_constraintTop_toTopOf="@+id/profile_pic_imageView"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginRight="16dp"
+            android:textSize="18sp"/>
+    <TextView
+            android:text="TextView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/date_textView"
+            app:layout_constraintBottom_toBottomOf="@+id/profile_pic_imageView"
+            app:layout_constraintStart_toEndOf="@+id/profile_pic_imageView"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp"
+            android:textSize="12sp"
+            android:textColor="@android:color/darker_gray"
+            app:fontFamily="@font/basic"/>
     <ImageView
             android:layout_width="0dp"
             android:layout_height="wrap_content" app:srcCompat="@mipmap/ic_launcher"
-            android:id="@+id/post_main_imageView" android:layout_marginTop="16dp"
+            android:id="@+id/post_main_imageView"
+            android:layout_marginTop="16dp"
+            android:adjustViewBounds="true"
             app:layout_constraintTop_toBottomOf="@+id/profile_pic_imageView"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -28,31 +62,16 @@
             android:text="TextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/userName_textView"
+            android:id="@+id/story_textView"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp"
             app:fontFamily="@font/basic"
-            android:textColor="@android:color/white" android:textStyle="bold"
-            app:layout_constraintStart_toEndOf="@+id/profile_pic_imageView" android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp" app:layout_constraintTop_toTopOf="@+id/profile_pic_imageView"
-            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginRight="16dp" android:textSize="18sp"/>
-    <TextView
-            android:text="TextView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/date_textView"
-            app:layout_constraintBottom_toBottomOf="@+id/profile_pic_imageView"
-            app:layout_constraintStart_toEndOf="@+id/profile_pic_imageView"
-            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="16dp" android:layout_marginRight="16dp" android:textSize="12sp"
-            android:textColor="@android:color/darker_gray" app:fontFamily="@font/basic"/>
-    <TextView
-            android:text="TextView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/story_textView" android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/post_main_imageView" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="16dp" android:layout_marginRight="16dp" app:fontFamily="@font/basic"
             android:textColor="@android:color/white"
-            android:layout_marginBottom="40dp" app:layout_constraintBottom_toBottomOf="parent"/>
+            android:layout_marginBottom="40dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/post_main_imageView" android:layout_marginTop="32dp"/>
 </android.support.constraint.ConstraintLayout>
