--- a/app/src/main/res/layout/profile_main.xml
+++ b/app/src/main/res/layout/profile_main.xml
@@ -67,7 +67,6 @@
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginLeft="32dp"
             app:layout_constraintHorizontal_bias="1.0"
-            android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/textView2"/>
 
     <TextView
@@ -103,7 +102,7 @@
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginLeft="32dp"
             app:layout_constraintHorizontal_bias="1.0"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView3"/>
+            app:layout_constraintTop_toBottomOf="@+id/textView3"/>
 
 
 </android.support.constraint.ConstraintLayout>
