--- a/app/src/main/res/layout/post_add.xml
+++ b/app/src/main/res/layout/post_add.xml
@@ -34,5 +34,13 @@
             app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
             app:layout_constraintHorizontal_bias="0.0"
             android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/post_add_imageView"/>
+    <ProgressBar
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/progressBar2" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="@+id/post_add_imageView" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
 
 </android.support.constraint.ConstraintLayout>
