--- a/app/src/main/res/layout/post_detail.xml
+++ b/app/src/main/res/layout/post_detail.xml
@@ -6,10 +6,12 @@
                                              android:background="#000000">
 
     <ImageView
-            android:layout_height="match_parent" app:srcCompat="@mipmap/ic_launcher"
+            android:layout_height="0dp" app:srcCompat="@mipmap/ic_launcher"
             android:id="@+id/detail_post_imageView"
-            android:scaleType="centerCrop"
+            android:scaleType="fitCenter"
             android:foregroundGravity="center"
-            android:layout_width="match_parent"
-            tools:layout_editor_absoluteX="384dp" tools:layout_editor_absoluteY="511dp"/>
+            android:layout_width="0dp"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" android:adjustViewBounds="true"/>
 </android.support.constraint.ConstraintLayout>
