--- a/app/src/main/res/layout/post_main_row.xml
+++ b/app/src/main/res/layout/post_main_row.xml
@@ -53,11 +53,10 @@
             android:layout_height="wrap_content" app:srcCompat="@mipmap/ic_launcher"
             android:id="@+id/post_main_imageView"
             android:layout_marginTop="16dp"
-            android:adjustViewBounds="true"
             app:layout_constraintTop_toBottomOf="@+id/profile_pic_imageView"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:scaleType="centerCrop"/>
+            android:scaleType="fitCenter" android:adjustViewBounds="true"/>
     <TextView
             android:text="TextView"
             android:layout_width="0dp"
@@ -71,7 +70,7 @@
             android:layout_marginRight="16dp"
             app:fontFamily="@font/basic"
             android:textColor="@android:color/white"
-            android:layout_marginBottom="40dp"
+            android:layout_marginBottom="32dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/post_main_imageView" android:layout_marginTop="32dp"/>
+            app:layout_constraintTop_toBottomOf="@+id/post_main_imageView" android:layout_marginTop="16dp"/>
 </android.support.constraint.ConstraintLayout>
