--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,4 +14,7 @@
         <item name="windowActionBarOverlay">true</item>
     </style>
 
+    <style name="noTransition" parent="AppTheme">
+        <item name="android:windowAnimationStyle">@null</item>
+    </style>
 </resources>
