--- a/app/src/main/res/layout/article_main.xml
+++ b/app/src/main/res/layout/article_main.xml
@@ -1,45 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-                                             android:layout_height="match_parent"
-                                             android:background="#000000">
+<android.support.constraint.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#000000"
+        tools:context=".ArticleMain">
 
     <ProgressBar
             style="?android:attr/progressBarStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/post_progressBar"
-            app:layout_constraintTop_toTopOf="@+id/post_main_recyclerView"
+            android:id="@+id/article_progressBar"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="8dp" android:layout_marginLeft="35dp" android:layout_marginStart="35dp"
-            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
+            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="8dp"
+            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
     <android.support.v7.widget.RecyclerView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:background="#000000"
+
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:id="@+id/post_main_recyclerView" android:paddingBottom="64dp">
-    </android.support.v7.widget.RecyclerView>
+            android:id="@+id/article_card_recyclerView" android:paddingBottom="64dp"
+    />
+
     <android.support.design.widget.FloatingActionButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:clickable="true"
             app:srcCompat="@drawable/camera_float1"
-            android:id="@+id/floatingActionButtonPost"
+            android:id="@+id/floatingActionButtonArticle"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="32dp"
             android:layout_marginRight="32dp"
             app:backgroundTint="@android:color/white"
             android:tint="@android:color/black" android:layout_marginBottom="32dp"
-            app:layout_constraintBottom_toTopOf="@+id/post_bottomNavigationView"/>
+            app:layout_constraintBottom_toTopOf="@+id/article_bottomNavigationView"/>
     <android.support.design.widget.BottomNavigationView
             android:layout_width="0dp"
             android:layout_height="50dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:id="@+id/post_bottomNavigationView"
+            android:id="@+id/article_bottomNavigationView"
             app:menu="@menu/bottom_nav_menu"
             app:itemIconTint="@android:color/white"
             app:labelVisibilityMode="unlabeled"/>
