--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -11,19 +11,26 @@
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:id="@+id/home_recyclerView"/>
-
     <android.support.design.widget.FloatingActionButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:clickable="true"
             android:id="@+id/floatingActionButton"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginBottom="32dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginEnd="32dp"
+            android:layout_marginRight="32dp"
             app:backgroundTint="@android:color/white"
-            android:tint="@android:color/black" app:srcCompat="@drawable/camera_float1"/>
-
+            android:tint="@android:color/black" app:srcCompat="@drawable/camera_float1"
+            android:layout_marginBottom="32dp" app:layout_constraintBottom_toTopOf="@+id/home_bottomNavigationView"/>
+    <android.support.design.widget.BottomNavigationView
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:id="@+id/home_bottomNavigationView"
+            app:menu="@menu/bottom_nav_menu"
+            app:itemIconTint="@android:color/white"
+            app:labelVisibilityMode="unlabeled"/>
 
 </android.support.constraint.ConstraintLayout>
