--- a/app/src/main/res/layout/post_detail.xml
+++ b/app/src/main/res/layout/post_detail.xml
@@ -41,11 +41,11 @@
             android:textSize="14sp" android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
             android:textColor="@android:color/white"/>
     <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp" app:srcCompat="@drawable/commenticon"
+            android:layout_width="20dp"
+            android:layout_height="20dp" app:srcCompat="@drawable/round_send_white_24dp"
             android:id="@+id/comment_send_btn"
-            app:layout_constraintEnd_toEndOf="@+id/view3" android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
+            app:layout_constraintEnd_toEndOf="@+id/view3" android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp"
             app:layout_constraintBottom_toBottomOf="@+id/view3"
             app:layout_constraintTop_toTopOf="@+id/view3"/>
 
