--- a/app/src/main/res/layout/post_add.xml
+++ b/app/src/main/res/layout/post_add.xml
@@ -4,12 +4,12 @@
                                              xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
                                              android:background="#000000"
-                                             android:layout_height="match_parent">
+                                             android:layout_height="wrap_content">
 
     <ImageView
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/addpicture"
+            app:srcCompat="@drawable/baseline_add_photo_alternate_white_48dp"
             android:id="@+id/post_add_imageView"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -45,7 +45,7 @@
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="48dp"
-            android:layout_marginRight="48dp"/>
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"/>
 
 </android.support.constraint.ConstraintLayout>
