--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,11 +10,17 @@
 
     <style name="AppTransparent" parent="AppTheme">
         <item name="colorPrimary">@android:color/transparent</item>
-        <!--<item name="colorPrimaryDark">@android:color/transparent</item>-->
         <item name="windowActionBarOverlay">true</item>
     </style>
 
     <style name="noTransition" parent="AppTheme">
         <item name="android:windowAnimationStyle">@null</item>
+    </style>
+
+    <style name="fullScreen" parent="AppTheme">
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="windowActionBarOverlay">true</item>
+        <item name="colorPrimary">@android:color/transparent</item>
     </style>
 </resources>
