--- a/app/src/main/res/layout/comment_row.xml
+++ b/app/src/main/res/layout/comment_row.xml
@@ -34,7 +34,7 @@
             app:layout_constraintTop_toBottomOf="@+id/comment_username_textView"
             app:layout_constraintStart_toStartOf="@+id/comment_username_textView"
             app:layout_constraintEnd_toEndOf="@+id/comment_username_textView" app:fontFamily="@font/basic"
-            android:textColor="@android:color/darker_gray"/>
+            android:textColor="@android:color/darker_gray" android:layout_marginTop="8dp"/>
     <TextView
             android:text="TextView"
             android:layout_width="0dp"
@@ -45,5 +45,5 @@
             app:layout_constraintEnd_toEndOf="@+id/comment_textView" app:fontFamily="@font/basic"
             android:textSize="10sp"
             android:textColor="@android:color/darker_gray" android:layout_marginBottom="16dp"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"/>
 </android.support.constraint.ConstraintLayout>
