--- a/app/src/main/res/layout/post_detail.xml
+++ b/app/src/main/res/layout/post_detail.xml
@@ -33,20 +33,18 @@
             app:layout_constraintStart_toStartOf="@+id/view3"
             app:layout_constraintTop_toTopOf="@+id/view3"
             app:layout_constraintBottom_toBottomOf="@+id/view3"
-            app:layout_constraintEnd_toStartOf="@+id/comment_send_btn"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
             android:hint="Comment"
             android:textColorHint="#FFFFFF"
             android:textSize="14sp" android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
-            android:textColor="@android:color/white"/>
-    <ImageView
-            android:layout_width="20dp"
-            android:layout_height="20dp" app:srcCompat="@drawable/round_send_white_24dp"
-            android:id="@+id/comment_send_btn"
-            app:layout_constraintEnd_toEndOf="@+id/view3" android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp"
-            app:layout_constraintBottom_toBottomOf="@+id/view3"
-            app:layout_constraintTop_toTopOf="@+id/view3"/>
+            android:textColor="@android:color/white" android:layout_marginEnd="16dp"
+            app:layout_constraintEnd_toStartOf="@+id/comment_send_button" android:layout_marginRight="16dp"/>
+    <Button
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:id="@+id/comment_send_button"
+            android:background="@drawable/round_send_white_24dp" app:layout_constraintEnd_toEndOf="@+id/view3"
+            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/view3"/>
 
 </android.support.constraint.ConstraintLayout>
