--- a/app/src/main/res/layout/post_main_row.xml
+++ b/app/src/main/res/layout/post_main_row.xml
@@ -60,15 +60,15 @@
             android:scaleType="fitCenter" android:adjustViewBounds="true"
             tools:srcCompat="@drawable/baseline_photo_white_24dp"/>
     <ImageView
-            android:layout_width="20dp"
-            android:layout_height="20dp" app:srcCompat="@drawable/baseline_chat_bubble_outline_white_24dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp" app:srcCompat="@drawable/baseline_chat_bubble_outline_white_24dp"
             android:id="@+id/comment_imageView" android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@+id/post_main_imageView"
             app:layout_constraintStart_toEndOf="@+id/like_imageView" android:layout_marginLeft="32dp"
             android:layout_marginStart="32dp"/>
     <ImageView
             android:layout_width="25dp"
-            android:layout_height="20dp" app:srcCompat="@drawable/baseline_favorite_border_white_24dp"
+            android:layout_height="25dp" app:srcCompat="@drawable/baseline_favorite_border_white_24dp"
             android:id="@+id/like_imageView" android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@+id/post_main_imageView" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginLeft="16dp" android:layout_marginStart="16dp"/>
@@ -89,4 +89,12 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintTop_toBottomOf="@+id/comment_imageView" android:layout_marginBottom="32dp"
             app:layout_constraintVertical_bias="0.287" android:layout_marginTop="16dp"/>
+    <TextView
+            android:text="TextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/comment_counter_textView" app:layout_constraintStart_toEndOf="@+id/comment_imageView"
+            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
+            app:layout_constraintTop_toTopOf="@+id/comment_imageView" android:textColor="@android:color/darker_gray"
+            app:layout_constraintBottom_toBottomOf="@+id/comment_imageView"/>
 </android.support.constraint.ConstraintLayout>
