--- a/app/src/main/res/layout/profile_main.xml
+++ b/app/src/main/res/layout/profile_main.xml
@@ -5,111 +5,55 @@
                                              android:layout_height="match_parent"
                                              android:background="#000000">
 
-    <View
-            android:layout_height="1dp"
-            android:id="@+id/view"
-            android:background="#000000"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_width="0dp"/>
-
     <de.hdodenhof.circleimageview.CircleImageView
             android:layout_width="60dp"
-            android:layout_height="60dp"
-            app:srcCompat="@drawable/user123"
-            android:id="@+id/profile_imageView"
+            android:layout_height="60dp" app:srcCompat="@drawable/user123"
+            android:id="@+id/profile_main_userImageView"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/view"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
-
-    <TextView
-            android:text=" User Name"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView2"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="32dp"
-            android:layout_marginStart="32dp"
-            android:textColor="@android:color/darker_gray"
-            android:textSize="12sp"
-            app:fontFamily="@font/assistant"
-            app:layout_constraintTop_toBottomOf="@+id/view"
-            android:layout_marginEnd="32dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginRight="32dp"/>
-
-    <EditText
-            android:id="@+id/username_textView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="32dp"
-            android:layout_marginRight="32dp"
-            android:ems="10"
-            android:hint="Username"
-            android:inputType="textPersonName"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:textColor="@android:color/white"
-            app:fontFamily="@font/assistant_bold"
-            android:layout_marginStart="32dp"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="32dp"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintTop_toBottomOf="@+id/textView2"/>
-
-    <TextView
-            android:text=" About"
-            android:layout_width="0dp"
-            android:layout_height="14dp"
-            android:id="@+id/textView3"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="32dp"
-            android:layout_marginStart="32dp"
-            android:textColor="@android:color/darker_gray"
-            android:textSize="12sp"
-            app:fontFamily="@font/assistant"
-            android:layout_marginEnd="32dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginRight="32dp"
-            app:layout_constraintHorizontal_bias="1.0"
-            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/username_textView"/>
-
-    <EditText
-            android:id="@+id/about_textView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="32dp"
-            android:layout_marginRight="32dp"
-            android:ems="10"
-            android:hint="Username"
-            android:inputType="textPersonName"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:textColor="@android:color/white"
-            app:fontFamily="@font/assistant_bold"
-            android:layout_marginStart="32dp"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="32dp"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintTop_toBottomOf="@+id/textView3"/>
-    <android.support.design.widget.BottomNavigationView
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:id="@+id/profile_bottomNavigationView"
-            app:menu="@menu/bottom_nav_menu"
-            app:itemIconTint="@android:color/white"
-            app:labelVisibilityMode="unlabeled"/>
+            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="16dp"
+            app:layout_constraintTop_toTopOf="parent"/>
     <ProgressBar
             style="?android:attr/progressBarStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/profile_progressBar" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            android:id="@+id/profile_main_progressBar" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"/>
+    <TextView
+            android:text="TextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/profile_main_usernameTextView" android:layout_marginTop="32dp"
+            app:layout_constraintTop_toBottomOf="@+id/profile_main_userImageView"
+            app:layout_constraintStart_toStartOf="parent"
             android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
-
+            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:textColor="@android:color/white"/>
+    <android.support.v7.widget.RecyclerView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/profile_main_usernameTextView"
+            android:id="@+id/profile_main_recyclerView"
+            android:background="#000000"/>
+    <ImageView
+            android:layout_width="24dp"
+            android:layout_height="24dp" app:srcCompat="@drawable/outline_edit_white_24dp"
+            android:id="@+id/edit_imageView" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp" android:layout_marginTop="16dp"
+            app:layout_constraintTop_toTopOf="parent"/>
+    <android.support.design.widget.BottomNavigationView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:id="@+id/profile_main__bottomNavigationView"
+            app:menu="@menu/bottom_nav_menu"
+            android:background="#000000"
+            app:labelVisibilityMode="labeled"
+            app:itemTextColor="#FFFFFF"/>
 </android.support.constraint.ConstraintLayout>
