--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,20 +2,20 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:id="@+id/bottom_home"
-          android:icon="@drawable/outline_home_white_24dp"
+          android:icon="@drawable/selector_home"
           android:title="Home"
           />
 
     <item android:id="@+id/bottom_post"
-          android:icon="@drawable/outline_whatshot_white_24dp"
+          android:icon="@drawable/selector_post"
           android:title="Post"/>
 
     <item android:id="@+id/bottom_article"
-          android:icon="@drawable/outline_style_white_24dp"
+          android:icon="@drawable/selector_article"
           android:title="Article"/>
 
     <item android:id="@+id/bottom_profile"
-          android:icon="@drawable/outline_person_white_24dp"
+          android:icon="@drawable/selector_profile"
           android:title="Profile"/>
 
 </menu>
