--- a/app/src/main/res/layout/main_login.xml
+++ b/app/src/main/res/layout/main_login.xml
@@ -56,4 +56,14 @@
             android:paddingRight="24dp"
             android:drawableRight="@drawable/googleicon" android:layout_marginLeft="24dp"
             android:layout_marginStart="24dp"/>
+    <ImageView
+            android:src="@drawable/mainlogin"
+            android:layout_height="0dp"
+            android:id="@+id/imageView"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.935"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:scaleType="centerCrop"
+            android:layout_width="0dp" android:adjustViewBounds="true"/>
 </android.support.constraint.ConstraintLayout>
