--- a/app/src/main/res/layout/article_main_row.xml
+++ b/app/src/main/res/layout/article_main_row.xml
@@ -13,7 +13,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="16dp" android:layout_marginRight="16dp" android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp" app:layout_constraintBottom_toBottomOf="parent"
-    >
+            app:cardCornerRadius="5dp">
         <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
@@ -28,8 +28,7 @@
             <View
                     android:layout_width="0dp"
                     android:layout_height="0dp"
-                    android:background="#000000"
-                    android:alpha=".35"
+                    android:background="#40000000"
                     android:id="@+id/view_mask"
                     app:layout_constraintBottom_toBottomOf="@+id/article_card_imageView"
                     app:layout_constraintTop_toTopOf="@+id/article_card_imageView"
