--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,11 +15,13 @@
 
     <style name="noTransition" parent="AppTheme">
         <item name="android:windowAnimationStyle">@null</item>
+        <item name="windowActionBarOverlay">true</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="colorPrimary">@android:color/transparent</item>
     </style>
 
     <style name="fullScreen" parent="AppTheme">
         <item name="android:windowNoTitle">true</item>
-        <item name="android:windowFullscreen">true</item>
         <item name="windowActionBarOverlay">true</item>
         <item name="colorPrimary">@android:color/transparent</item>
     </style>
