--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,11 +10,11 @@
     <EditText
             android:id="@+id/textView_email_login"
             android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginEnd="24dp"
+            android:layout_marginRight="24dp"
             android:background="@drawable/rounded_white_textview"
             android:ems="10"
             android:hint="Email"
@@ -22,8 +22,10 @@
             android:paddingLeft="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintTop_toBottomOf="@+id/gallery_imageView"/>
+            app:layout_constraintHorizontal_bias="1.0"
+            android:layout_marginTop="32dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView"
+            android:textColorHint="@android:color/darker_gray"/>
 
     <EditText
         android:id="@+id/textView_pass_login"
@@ -37,26 +39,45 @@
         android:paddingLeft="20dp"
         app:layout_constraintEnd_toEndOf="@+id/textView_email_login"
         app:layout_constraintStart_toStartOf="@+id/textView_email_login"
-        app:layout_constraintTop_toBottomOf="@+id/textView_email_login" />
+        app:layout_constraintTop_toBottomOf="@+id/textView_email_login"
+        android:textColorHint="@android:color/darker_gray"/>
 
     <Button
-        android:id="@+id/button_login"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:background="@drawable/rounded_button"
-        android:text="LogIn"
-        android:textColor="@android:color/white"
-        app:layout_constraintEnd_toEndOf="@+id/textView_pass_login"
-        app:layout_constraintStart_toStartOf="@+id/textView_pass_login"
-        app:layout_constraintTop_toBottomOf="@+id/textView_pass_login" />
-    <ImageView
+            android:id="@+id/button_login"
             android:layout_width="0dp"
-            android:layout_height="200dp" app:srcCompat="@drawable/photogigs"
-            android:id="@+id/gallery_imageView"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:scaleType="fitCenter" android:layout_marginTop="16dp"/>
+            android:layout_height="48dp"
+            android:layout_marginTop="32dp"
+            android:background="@drawable/rounded_button"
+            android:text="LogIn"
+            android:textColor="@android:color/white"
+            app:layout_constraintEnd_toEndOf="@+id/textView_pass_login"
+            app:layout_constraintStart_toStartOf="@+id/textView_pass_login"
+            app:layout_constraintTop_toBottomOf="@+id/textView_pass_login"/>
+    <TextView
+            android:text="Login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView" android:textSize="24sp"
+            android:textColor="@android:color/white" android:layout_marginStart="24dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
+            android:layout_marginTop="24dp"
+            app:layout_constraintTop_toTopOf="parent"/>
+    <TextView
+            android:text="Belum punya akun ?"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView4" android:layout_marginTop="36dp"
+            app:layout_constraintTop_toBottomOf="@+id/button_login"
+            android:textColor="@android:color/white"
+            android:layout_marginStart="24dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="24dp"/>
+    <TextView
+            android:text="Daftar disini"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/daftar_textView"
+            android:textColor="#00FF90"
+            app:layout_constraintTop_toTopOf="@+id/textView4"
+            app:layout_constraintStart_toEndOf="@+id/textView4" android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"/>
 </android.support.constraint.ConstraintLayout>
