--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -13,10 +13,10 @@
             android:id="@+id/username_register"
             android:layout_width="0dp"
             android:layout_height="50dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginEnd="24dp"
+            android:layout_marginRight="24dp"
             android:background="@drawable/rounded_white_textview"
             android:ems="10"
             android:hint="Username"
@@ -25,7 +25,9 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintTop_toBottomOf="@+id/imageView2"/>
+            android:layout_marginTop="32dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView5"
+            android:textColorHint="@android:color/darker_gray"/>
 
     <EditText
         android:id="@+id/password_register"
@@ -39,7 +41,8 @@
         android:paddingLeft="20dp"
         app:layout_constraintEnd_toEndOf="@+id/email_register"
         app:layout_constraintStart_toStartOf="@+id/email_register"
-        app:layout_constraintTop_toBottomOf="@+id/email_register" />
+        app:layout_constraintTop_toBottomOf="@+id/email_register"
+        android:textColorHint="@android:color/darker_gray"/>
 
     <EditText
         android:id="@+id/email_register"
@@ -53,26 +56,27 @@
         android:paddingLeft="20dp"
         app:layout_constraintEnd_toEndOf="@+id/username_register"
         app:layout_constraintStart_toStartOf="@+id/username_register"
-        app:layout_constraintTop_toBottomOf="@+id/username_register" />
+        app:layout_constraintTop_toBottomOf="@+id/username_register"
+        android:textColorHint="@android:color/darker_gray"/>
 
     <Button
             android:id="@+id/button_registerMain"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="32dp"
             android:background="@drawable/rounded_button"
             android:text="REGISTER"
             android:textColor="@android:color/white"
             app:layout_constraintEnd_toEndOf="@+id/password_register"
             app:layout_constraintStart_toStartOf="@+id/password_register"
             app:layout_constraintTop_toBottomOf="@+id/password_register"/>
-
-    <ImageView
-            android:layout_width="0dp"
-            android:layout_height="150dp" app:srcCompat="@drawable/photogigs"
-            android:id="@+id/imageView2"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="16dp"/>
+    <TextView
+            android:text="Daftar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView5" android:textColor="@android:color/white"
+            android:textSize="24sp" android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginStart="24dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="24dp"/>
 
 </android.support.constraint.ConstraintLayout>
