--- a/app/src/main/res/layout/post_add.xml
+++ b/app/src/main/res/layout/post_add.xml
@@ -4,7 +4,7 @@
                                              xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
                                              android:background="#000000"
-                                             android:layout_height="wrap_content">
+                                             android:layout_height="match_parent">
 
     <ImageView
             android:layout_width="100dp"
