--- a/app/src/main/res/layout/post_main.xml
+++ b/app/src/main/res/layout/post_main.xml
@@ -12,15 +12,17 @@
             app:layout_constraintTop_toTopOf="@+id/post_main_recyclerView"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="8dp" android:layout_marginLeft="35dp" android:layout_marginStart="35dp"
+            android:layout_marginTop="8dp" android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
     <android.support.v7.widget.RecyclerView
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:id="@+id/post_main_recyclerView" android:paddingBottom="64dp">
-    </android.support.v7.widget.RecyclerView>
+            android:id="@+id/post_main_recyclerView"
+            app:layout_constraintBottom_toTopOf="@+id/post_bottomNavigationView" android:background="#000000"
+            android:paddingBottom="8dp"/>
+
     <android.support.design.widget.FloatingActionButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -41,6 +43,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:id="@+id/post_bottomNavigationView"
             app:menu="@menu/bottom_nav_menu"
-            app:itemIconTint="@android:color/white"
+            android:background="#000000"
             app:labelVisibilityMode="labeled" app:itemTextColor="@android:color/white"/>
 </android.support.constraint.ConstraintLayout>
