--- a/app/src/main/res/layout/post_main_row.xml
+++ b/app/src/main/res/layout/post_main_row.xml
@@ -7,94 +7,110 @@
                                              android:background="#000000">
 
 
-    <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            app:srcCompat="@mipmap/ic_launcher_round"
-            android:id="@+id/profile_pic_imageView"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="16dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toTopOf="parent"/>
-    <TextView
-            android:text="TextView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/userName_textView"
-            app:fontFamily="@font/basic"
-            android:textColor="@android:color/white"
-            android:singleLine="true"
-            android:textStyle="bold"
-            app:layout_constraintStart_toEndOf="@+id/profile_pic_imageView"
-            android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"
-            app:layout_constraintTop_toTopOf="@+id/profile_pic_imageView"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginRight="16dp"
-            android:textSize="18sp"/>
-    <TextView
-            android:text="TextView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/date_textView"
-            app:layout_constraintBottom_toBottomOf="@+id/profile_pic_imageView"
-            app:layout_constraintStart_toEndOf="@+id/profile_pic_imageView"
-            android:layout_marginLeft="16dp"
-            android:layout_marginStart="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp"
-            android:textSize="12sp"
-            android:textColor="@android:color/darker_gray"
-            app:fontFamily="@font/basic"/>
-    <ImageView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/post_main_imageView"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/profile_pic_imageView"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:scaleType="fitCenter" android:adjustViewBounds="true"
-            tools:srcCompat="@drawable/placeholder"/>
-    <ImageView
-            android:layout_width="25dp"
-            android:layout_height="25dp" app:srcCompat="@drawable/baseline_chat_bubble_outline_white_24dp"
-            android:id="@+id/comment_imageView" android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/post_main_imageView"
-            app:layout_constraintStart_toEndOf="@+id/like_imageView" android:layout_marginLeft="32dp"
-            android:layout_marginStart="32dp"/>
-    <ImageView
-            android:layout_width="25dp"
-            android:layout_height="25dp" app:srcCompat="@drawable/baseline_favorite_border_white_24dp"
-            android:id="@+id/like_imageView" android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/post_main_imageView" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"/>
-    <TextView
-            android:text="TextView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/story_textView"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="16dp"
-            android:layout_marginStart="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp"
-            app:fontFamily="@font/basic"
-            android:textColor="@android:color/white"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintTop_toBottomOf="@+id/comment_imageView" android:layout_marginBottom="32dp"
-            app:layout_constraintVertical_bias="0.287" android:layout_marginTop="16dp"/>
-    <TextView
-            android:text="TextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/comment_counter_textView" app:layout_constraintStart_toEndOf="@+id/comment_imageView"
-            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
-            app:layout_constraintTop_toTopOf="@+id/comment_imageView" android:textColor="@android:color/darker_gray"
-            app:layout_constraintBottom_toBottomOf="@+id/comment_imageView"/>
+    <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" app:cardCornerRadius="5dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
+            app:cardBackgroundColor="#202020">
+        <android.support.constraint.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    app:srcCompat="@mipmap/ic_launcher_round"
+                    android:id="@+id/profile_pic_imageView"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toTopOf="parent"/>
+            <TextView
+                    android:text="name"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/userName_textView"
+                    app:fontFamily="@font/basic"
+                    android:textColor="@android:color/white"
+                    android:singleLine="true"
+                    app:layout_constraintStart_toEndOf="@+id/profile_pic_imageView"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginLeft="8dp"
+                    app:layout_constraintTop_toTopOf="@+id/profile_pic_imageView"
+                    android:layout_marginEnd="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginRight="8dp"
+                    android:textSize="14sp"/>
+            <TextView
+                    android:text="date"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/date_textView"
+                    app:layout_constraintBottom_toBottomOf="@+id/profile_pic_imageView"
+                    app:layout_constraintStart_toEndOf="@+id/profile_pic_imageView"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginStart="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginRight="8dp"
+                    android:textSize="10sp"
+                    android:textColor="@android:color/darker_gray"
+                    app:fontFamily="@font/basic"/>
+            <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/post_main_imageView"
+                    android:layout_marginTop="16dp"
+                    app:layout_constraintTop_toBottomOf="@+id/profile_pic_imageView"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:scaleType="fitCenter" android:adjustViewBounds="true"
+                    tools:srcCompat="@drawable/placeholder1"/>
+            <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/story_textView"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginStart="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginRight="8dp"
+                    app:fontFamily="@font/basic"
+                    android:textColor="@android:color/white"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintTop_toBottomOf="@+id/comment_imageView" android:layout_marginBottom="8dp"
+                    app:layout_constraintVertical_bias="0.287" android:layout_marginTop="8dp" android:textSize="12sp"
+            />
+            <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="20dp" app:srcCompat="@drawable/baseline_favorite_border_white_24dp"
+                    android:id="@+id/like_imageView" android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/post_main_imageView"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
+            <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="24dp" app:srcCompat="@drawable/baseline_chat_bubble_outline_white_24dp"
+                    android:id="@+id/comment_imageView" android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/post_main_imageView"
+                    app:layout_constraintStart_toEndOf="@+id/like_imageView" android:layout_marginLeft="16dp"
+                    android:layout_marginStart="16dp"/>
+            <TextView
+                    android:text="comment"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/comment_counter_textView"
+                    app:layout_constraintStart_toEndOf="@+id/comment_imageView"
+                    android:layout_marginLeft="4dp" android:layout_marginStart="4dp"
+                    app:layout_constraintTop_toTopOf="@+id/comment_imageView"
+                    android:textColor="@android:color/darker_gray"
+                    app:layout_constraintBottom_toBottomOf="@+id/comment_imageView" android:textSize="10sp"
+                    android:layout_marginBottom="4dp"/>
+        </android.support.constraint.ConstraintLayout>
+    </android.support.v7.widget.CardView>
 </android.support.constraint.ConstraintLayout>
