--- a/app/src/main/res/layout/profile_edit.xml
+++ b/app/src/main/res/layout/profile_edit.xml
@@ -4,7 +4,7 @@
                                              xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
                                              android:layout_height="match_parent"
-                                             android:background="#000000" android:id="@+id/signOut_textView">
+                                             android:background="#000000">
 
     <ProgressBar
             style="?android:attr/progressBarStyle"
@@ -102,12 +102,19 @@
             android:layout_marginLeft="32dp"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintTop_toBottomOf="@+id/textView3"/>
-    <TextView
-            android:text="Sign Out"
-            android:layout_width="wrap_content"
+    <Button
+            android:text="SIgn Out"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/textView" app:layout_constraintStart_toStartOf="@+id/about_textView"
-            android:layout_marginTop="48dp"
-            app:layout_constraintTop_toBottomOf="@+id/about_textView" android:textColor="#FFFFFF"
-            android:textStyle="bold"/>
+            android:id="@+id/signout_button"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="32dp"
+            android:layout_marginRight="32dp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="32dp"
+            android:layout_marginStart="32dp"
+            android:background="@drawable/rounded_button" android:textAllCaps="false"
+            android:textColor="@android:color/white"/>
 </android.support.constraint.ConstraintLayout>
