--- a/app/src/main/res/layout/profile_main.xml
+++ b/app/src/main/res/layout/profile_main.xml
@@ -14,39 +14,15 @@
             android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"/>
-    <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_width="60dp"
-            android:layout_height="60dp" app:srcCompat="@drawable/user123"
-            android:id="@+id/profile_main_userImageView"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="16dp"
-            app:layout_constraintTop_toTopOf="parent"/>
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/profile_main_usernameTextView" android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/profile_main_userImageView"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:textColor="@android:color/white"/>
-    <ImageView
-            android:layout_width="24dp"
-            android:layout_height="24dp" app:srcCompat="@drawable/outline_edit_white_24dp"
-            android:id="@+id/edit_imageView" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp" android:layout_marginTop="16dp"
-            app:layout_constraintTop_toTopOf="parent"/>
     <android.support.v7.widget.RecyclerView
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/profile_main_usernameTextView"
             android:id="@+id/profile_main_recyclerView"
             android:background="#000000"
-            app:layout_constraintBottom_toTopOf="@+id/profile_main__bottomNavigationView"
-            android:layout_marginTop="16dp"
-    />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/profile_main__bottomNavigationView"/>
     <android.support.design.widget.BottomNavigationView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
