--- a/app/src/main/res/layout/profile_main_bottom.xml
+++ b/app/src/main/res/layout/profile_main_bottom.xml
@@ -3,14 +3,15 @@
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
                                              xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
-                                             android:layout_height="match_parent"
-                                             android:background="#000000">
+                                             android:layout_height="wrap_content">
 
-    <com.github.chrisbanes.photoview.PhotoView
+    <android.support.v7.widget.RecyclerView
             android:layout_width="0dp"
-            android:layout_height="0dp" app:srcCompat="@drawable/placeholder1"
-            android:id="@+id/full_screen_image"
+            android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            android:id="@+id/profile_main_bottom_recycleView"
+            android:layout_marginLeft="6dp" android:layout_marginStart="6dp" android:layout_marginEnd="6dp"
+            android:layout_marginRight="6dp"
+            />
 </android.support.constraint.ConstraintLayout>
