--- a/app/src/main/res/layout/profile_main_user_gallery.xml
+++ b/app/src/main/res/layout/profile_main_user_gallery.xml
@@ -4,12 +4,20 @@
                                              xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
                                              android:layout_height="wrap_content"
-                                             android:background="#000000">
+>
 
-    <ImageView
+    <android.support.v7.widget.CardView
             android:layout_width="0dp"
-            android:layout_height="wrap_content" app:srcCompat="@drawable/baseline_photo_white_24dp"
-            android:id="@+id/gallery_imageView" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" android:adjustViewBounds="true" android:scaleType="fitCenter"/>
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:cardCornerRadius="5dp"
+            app:cardBackgroundColor="@android:color/transparent"
+            app:layout_constraintBottom_toBottomOf="parent">
+        <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" app:srcCompat="@drawable/mainlogin"
+                android:id="@+id/gallery_imageView" android:adjustViewBounds="true" android:scaleType="fitCenter"/>
+    </android.support.v7.widget.CardView>
 </android.support.constraint.ConstraintLayout>
