--- a/app/src/main/res/layout/article_main_row.xml
+++ b/app/src/main/res/layout/article_main_row.xml
@@ -6,58 +6,75 @@
                                              android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="16dp" android:layout_marginRight="16dp" android:layout_marginLeft="16dp"
-            android:layout_marginStart="16dp" app:layout_constraintBottom_toBottomOf="parent"
-            app:cardCornerRadius="5dp">
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        app:cardCornerRadius="5dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
         <android.support.constraint.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
             <ImageView
-                    android:layout_width="0dp"
-                    android:layout_height="225dp" app:srcCompat="@mipmap/ic_launcher"
-                    android:id="@+id/article_card_imageView"
-                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    android:scaleType="centerCrop"/>
+                android:id="@+id/article_card_imageView"
+                android:layout_width="0dp"
+                android:layout_height="225dp"
+                android:scaleType="centerCrop"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@mipmap/ic_launcher" />
+
             <View
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:background="#40000000"
-                    android:id="@+id/view_mask"
-                    app:layout_constraintBottom_toBottomOf="@+id/article_card_imageView"
-                    app:layout_constraintTop_toTopOf="@+id/article_card_imageView"
-                    app:layout_constraintEnd_toEndOf="@+id/article_card_imageView"
-                    app:layout_constraintStart_toStartOf="@+id/article_card_imageView"
-            />
+                android:id="@+id/view_mask"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:background="#40000000"
+                app:layout_constraintBottom_toBottomOf="@+id/article_card_imageView"
+                app:layout_constraintEnd_toEndOf="@+id/article_card_imageView"
+                app:layout_constraintStart_toStartOf="@+id/article_card_imageView"
+                app:layout_constraintTop_toTopOf="@+id/article_card_imageView" />
+
             <TextView
-                    android:text="Article Sub View"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/subTitle_textView"
-                    android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    android:textSize="12sp"
-                    android:textColor="@android:color/white" android:layout_marginEnd="16dp"
-                    android:layout_marginRight="16dp" android:layout_marginLeft="16dp"
-                    android:layout_marginStart="16dp" app:fontFamily="@font/basic"/>
+                android:id="@+id/subTitle_textView"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginBottom="16dp"
+                android:text="Article Sub View"
+                android:textColor="@android:color/white"
+                android:textSize="12sp"
+                app:fontFamily="@font/basic"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
             <TextView
-                    android:text="Article Title"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/title_card_textView" app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
-                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
-                    android:layout_marginStart="16dp" android:layout_marginBottom="8dp"
-                    app:layout_constraintBottom_toTopOf="@+id/subTitle_textView" android:textSize="18sp"
-                    android:textColor="@android:color/white" android:textStyle="bold"
-                    app:fontFamily="@font/basic"/>
+                android:id="@+id/title_card_textView"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginBottom="8dp"
+                android:text="Article Title"
+                android:textColor="@android:color/white"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:fontFamily="@font/basic"
+                app:layout_constraintBottom_toTopOf="@+id/subTitle_textView"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
 </android.support.constraint.ConstraintLayout>
