--- a/app/src/main/res/layout/post_detail.xml
+++ b/app/src/main/res/layout/post_detail.xml
@@ -15,16 +15,18 @@
             android:id="@+id/recyclerView_post_detail"
             app:layout_constraintBottom_toTopOf="@+id/view3" android:paddingBottom="8dp"
     />
+
     <View
-            android:layout_width="0dp"
-            android:layout_height="48dp"
-            android:id="@+id/view3"
-            android:background="@drawable/rounded_white_textview"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintBottom_toBottomOf="parent"
-    />
+        android:id="@+id/view3"
+        android:layout_width="0dp"
+        android:layout_height="32dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:background="@drawable/rounded_white_textview"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
             android:layout_width="0dp"
