--- a/app/src/main/res/layout/post_main_row.xml
+++ b/app/src/main/res/layout/post_main_row.xml
@@ -86,20 +86,26 @@
                     app:layout_constraintTop_toBottomOf="@+id/comment_imageView" android:layout_marginBottom="8dp"
                     app:layout_constraintVertical_bias="0.287" android:layout_marginTop="8dp" android:textSize="12sp"
             />
+
             <ImageView
-                    android:layout_width="20dp"
-                    android:layout_height="20dp" app:srcCompat="@drawable/baseline_favorite_border_white_24dp"
-                    android:id="@+id/like_imageView" android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toBottomOf="@+id/post_main_imageView"
-                    app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
+                android:id="@+id/like_imageView"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/post_main_imageView"
+                app:srcCompat="@drawable/baseline_favorite_border_white_24dp" />
+
             <ImageView
-                    android:layout_width="20dp"
-                    android:layout_height="24dp" app:srcCompat="@drawable/baseline_chat_bubble_outline_white_24dp"
-                    android:id="@+id/comment_imageView" android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toBottomOf="@+id/post_main_imageView"
-                    app:layout_constraintStart_toEndOf="@+id/like_imageView" android:layout_marginLeft="16dp"
-                    android:layout_marginStart="16dp"/>
+                android:id="@+id/comment_imageView"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintStart_toEndOf="@+id/like_counter_textView"
+                app:layout_constraintTop_toBottomOf="@+id/post_main_imageView"
+                app:srcCompat="@drawable/baseline_chat_bubble_outline_white_24dp" />
             <TextView
                     android:text="comment"
                     android:layout_width="wrap_content"
@@ -111,6 +117,19 @@
                     android:textColor="@android:color/darker_gray"
                     app:layout_constraintBottom_toBottomOf="@+id/comment_imageView" android:textSize="10sp"
                     android:layout_marginBottom="4dp"/>
+
+            <TextView
+                android:id="@+id/like_counter_textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:layout_marginBottom="4dp"
+                android:text="like"
+                android:textColor="@android:color/darker_gray"
+                android:textSize="10sp"
+                app:layout_constraintBottom_toBottomOf="@+id/like_imageView"
+                app:layout_constraintStart_toEndOf="@+id/like_imageView"
+                app:layout_constraintTop_toTopOf="@+id/like_imageView" />
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
 </android.support.constraint.ConstraintLayout>
