--- a/app/src/main/res/layout/profile_main.xml
+++ b/app/src/main/res/layout/profile_main.xml
@@ -14,6 +14,20 @@
             android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"/>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/profile_main_floating_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="32dp"
+        android:clickable="true"
+        android:tint="@android:color/black"
+        app:backgroundTint="@android:color/white"
+        app:layout_constraintBottom_toTopOf="@+id/profile_main__bottomNavigationView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/camera_float1" />
+
     <android.support.v7.widget.RecyclerView
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -22,7 +36,9 @@
             android:id="@+id/profile_main_recyclerView"
             android:background="#000000"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/profile_main__bottomNavigationView"/>
+            app:layout_constraintBottom_toTopOf="@+id/profile_main__bottomNavigationView">
+
+    </android.support.v7.widget.RecyclerView>
     <android.support.design.widget.BottomNavigationView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
