--- a/app/src/main/res/layout/comment_row.xml
+++ b/app/src/main/res/layout/comment_row.xml
@@ -15,51 +15,66 @@
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp" android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="@+id/cardView"/>
+
     <android.support.v7.widget.CardView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            app:layout_constraintStart_toEndOf="@+id/comment_profile_imageView" android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp" app:cardBackgroundColor="#202020" app:cardCornerRadius="10dp"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:id="@+id/cardView"
-    >
+        android:id="@+id/cardView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        app:cardBackgroundColor="#202020"
+        app:cardCornerRadius="5dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/comment_profile_imageView"
+        app:layout_constraintTop_toTopOf="parent">
+
         <android.support.constraint.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
             <TextView
-                    android:text="name"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/comment_username_textView"
-                    app:fontFamily="@font/basic"
-                    android:textColor="@android:color/white"
-                    android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
-                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
-                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginRight="8dp"/>
+                android:id="@+id/comment_username_textView"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
+                android:text="name"
+                android:textColor="@android:color/white"
+                app:fontFamily="@font/basic"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
             <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/comment_textView"
-                    app:layout_constraintTop_toBottomOf="@+id/comment_username_textView"
-                    app:layout_constraintStart_toStartOf="@+id/comment_username_textView"
-                    app:layout_constraintEnd_toEndOf="@+id/comment_username_textView" app:fontFamily="@font/basic"
-                    android:textColor="@android:color/darker_gray" android:layout_marginTop="8dp"/>
+                android:id="@+id/comment_textView"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:textColor="@android:color/darker_gray"
+                app:fontFamily="@font/basic"
+                app:layout_constraintEnd_toEndOf="@+id/comment_username_textView"
+                app:layout_constraintStart_toStartOf="@+id/comment_username_textView"
+                app:layout_constraintTop_toBottomOf="@+id/comment_username_textView" />
+
             <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/comment_date_textView"
-                    app:layout_constraintTop_toBottomOf="@+id/comment_textView"
-                    app:fontFamily="@font/basic"
-                    android:textSize="10sp"
-                    android:textColor="@android:color/darker_gray" android:layout_marginBottom="8dp"
-                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
-                    app:layout_constraintStart_toStartOf="@+id/comment_textView"
-                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="@+id/comment_textView"
-                    android:layout_marginRight="8dp"/>
+                android:id="@+id/comment_date_textView"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginBottom="8dp"
+                android:textColor="@android:color/darker_gray"
+                android:textSize="10sp"
+                app:fontFamily="@font/basic"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/comment_textView"
+                app:layout_constraintStart_toStartOf="@+id/comment_textView"
+                app:layout_constraintTop_toBottomOf="@+id/comment_textView" />
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
 </android.support.constraint.ConstraintLayout>
