--- a/app/src/main/res/layout/profile_main_top.xml
+++ b/app/src/main/res/layout/profile_main_top.xml
@@ -36,16 +36,19 @@
                     app:layout_constraintTop_toTopOf="parent"
                     android:scaleType="centerCrop"
                     android:adjustViewBounds="true"/>
+
             <View
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:id="@+id/mask_view"
-                    android:background="#40000000"
-                    app:layout_constraintTop_toTopOf="@+id/profile_main_imageView"
-                    app:layout_constraintBottom_toBottomOf="@+id/profile_main_imageView"
-                    app:layout_constraintEnd_toEndOf="@+id/profile_main_imageView"
-                    app:layout_constraintStart_toStartOf="@+id/profile_main_imageView"
-            />
+                android:id="@+id/mask_view"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:background="#40000000"
+                app:layout_constraintBottom_toBottomOf="@+id/profile_main_imageView"
+                app:layout_constraintEnd_toEndOf="@+id/profile_main_imageView"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="@+id/profile_main_imageView"
+                app:layout_constraintTop_toTopOf="@+id/profile_main_imageView"
+                app:layout_constraintVertical_bias="0.0" />
+
             <de.hdodenhof.circleimageview.CircleImageView
                     android:layout_width="60dp"
                     android:layout_height="60dp" app:srcCompat="@drawable/user123"
@@ -65,15 +68,17 @@
                     android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                     app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                     android:layout_marginRight="8dp" android:textSize="18sp" android:textColor="@android:color/white"/>
+
             <ImageView
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    app:srcCompat="@drawable/outline_edit_white_24dp"
-                    android:id="@+id/edit_imageView"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
-                    app:layout_constraintBottom_toBottomOf="@+id/user_textView"
-                    app:layout_constraintTop_toTopOf="@+id/user_textView"/>
+                android:id="@+id/edit_imageView"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_marginEnd="16dp"
+                app:layout_constraintBottom_toBottomOf="@+id/user_textView"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/user_textView"
+                app:srcCompat="@drawable/outline_edit_white_24dp" />
+
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
 </android.support.constraint.ConstraintLayout>
